--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -30,7 +30,7 @@
 
 - name: Dr. Zhongguo Li
   photo: LUCAS_Logo.png
-  info: Lecture in robotics, control, communication & AI
+  info: Lecture in robotics, control, communication and AI
   email: 
   number_educ: 2
   education1: PhD in electrical and electronic engineering  
