--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: LUCAS
 email:
 description: > # this means to ignore newlines until "baseurl:"
   This is group website for LUCAS - Loughborough University Center for Autonomous System, Loughborough University
-baseurl: "/lucaspage.github.io" # Only if your site type is GitHub Project sites and doesn't have a custom domain,
+baseurl: "" # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
 url: "https://lu-centre-for-autonomous-systems.github.io"
 keywords: "LUCAS, Loughborough University, Decision Making, Advanced Automation Control"
