--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,9 @@ description: > # this means to ignore newlines until "baseurl:"
   This is group website for LUCAS - Loughborough University Center for Autonomous System, Loughborough University
 baseurl: "" # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
-url: "https://lu-centre-for-autonomous-systems.github.io"
+# /lucaspage.github.io
+url: "http://lucasresearch.co.uk"
+# https://lu-centre-for-autonomous-systems.github.io 
 keywords: "LUCAS, Loughborough University, Decision Making, Advanced Automation Control"
 
 include:
