--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
 # /lucaspage.github.io
-url: "http://lucasresearch.co.uk"
-# https://lu-centre-for-autonomous-systems.github.io 
+# url: "http://lucasresearch.co.uk"
+url: "https://lu-centre-for-autonomous-systems.github.io" 
 keywords: "LUCAS, Loughborough University, Decision Making, Advanced Automation Control"
 
 include:
