--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,10 @@ title: LUCAS
 email:
 description: > # this means to ignore newlines until "baseurl:"
   This is group website for LUCAS - Loughborough University Center for Autonomous System, Loughborough University
-baseurl: "" # Only if your site type is GitHub Project sites and doesn't have a custom domain,
+# baseurl: "/lucaspage.github.io" 
+# Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
-# /lucaspage.github.io
+baseurl: "lucasresearch.co.uk"
 # url: "http://lucasresearch.co.uk"
 url: "https://lu-centre-for-autonomous-systems.github.io" 
 keywords: "LUCAS, Loughborough University, Decision Making, Advanced Automation Control"
