--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 title: LUCAS
 email:
 description: > # this means to ignore newlines until "baseurl:"
-  This is group website for LUCAS - Loughborough University Center for Autonomous System, Loughborough University
-# baseurl: "/lucaspage.github.io" 
+  This is group website for LUCAS - Loughborough University Center for Autonomous System, Loughborough University 
 # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
-baseurl: "/lucasresearch.co.uk"
+# baseurl: "/lucasresearch.co.uk"
+baseurl: "/lucaspage.github.io"
 # url: "http://lucasresearch.co.uk"
 url: "https://lu-centre-for-autonomous-systems.github.io" 
 keywords: "LUCAS, Loughborough University, Decision Making, Advanced Automation Control"
