--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -138,3 +138,142 @@
   education3: 
   education4:
 
+- name: Dr. James Dunthorne
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: 
+  education3: 
+  education4:
+
+- name: Dr. William Eaton
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: 
+  education3: 
+  education4:
+
+- name: Dr. Runxiao Ding
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: 
+  education3: 
+  education4:
+
+- name: Dr. Shuo Liu
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: 
+  education3: 
+  education4:
+
+- name: Dr. Jean Smith
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: 
+  education3: 
+  education4:
+
+- name: Dr. Michael Hutchinson
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: 
+  education3: 
+  education4:
+
+- name: Dr. Pawel Ladosz
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: 
+  education3: 
+  education4:
+
+- name: Dr. Yali Xu
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: Nanjing University of Aeronautics and Astronautics
+  education3: 
+  education4:
+
+- name: Prof. Yunfeng Cao
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: Nanjing University of Aeronautics and Astronautics
+  education3: 
+  education4:
+
+- name: Dr. Songyin Cao
+  photo: LUCAS_Logo.png
+  info: Associate Researcher
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: Yangzhou University
+  education3: 
+  education4:
+
+- name: Dr. Zhenhua Zhao
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in control theory and control engineering
+  education2: Nanjing University of Aeronautics and Astronautics
+  education3: 
+  education4:
+
+- name: Dr. Hao Lu
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: 
+  education3: 
+  education4:
+
+- name: Prof. Zhengping Feng
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: 
+  education3: 
+  education4:
+
+- name: Dr. Kang Wu
+  photo: LUCAS_Logo.png
+  info: Lecture in
+  email: 
+  number_educ: 2
+  education1: PhD in   
+  education2: 
+  education3: 
+  education4:
