--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: Oct 2023
+  headline: <b>New post!</b> The UKACC PhD Showcase and Prof Roger Goodall Memorial will be held at LU <a href="https://ukacc.sites.sheffield.ac.uk/events/ukacc-phd-showcase">here</a>.
 - date: Feb 2022
   headline: <b>New post!</b> IEEE International conference on mechatronics will be held at LU <a href="https://www.imagovenues.co.uk/icm2023/">here</a>.
 - date: Feb 2022
