--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   This is group website for LUCAS - Loughborough University Center for Autonomous System, Loughborough University 
 # Only if your site type is GitHub Project sites and doesn't have a custom domain,
 # change below value to '/projectname'.
-# baseurl: "/lucasresearch.co.uk"
+# baseurl: "/lucasresearch.co.uk"rlu
 baseurl: "/lucaspage.github.io"
 # url: "http://lucasresearch.co.uk"
 url: "https://lu-centre-for-autonomous-systems.github.io" 
