--- a/_data/software_eng.yml
+++ b/_data/software_eng.yml
@@ -1,5 +1,5 @@
 - name: Dr. Matthew Coombes
-  photo: LUCAS_Logo.png
+  photo: Matt.jpeg
   info: 
   email: m.j.coombes@lboro.ac.uk
   number_educ: 2
@@ -9,7 +9,7 @@
   education4: 
 
 - name: Dr. Jingjing Jiang
-  photo: LUCAS_Logo.png
+  photo: Jingjing.jpeg
   info: 
   email: j.jiang2@lboro.ac.uk
   number_educ: 2
@@ -19,7 +19,7 @@
   education4:
 
 - name: Dr. James Knowles
-  photo: LUCAS_Logo.png
+  photo: James.jpeg
   info: 
   email: J.A.C.Knowles@lboro.ac.uk
   number_educ: 2
@@ -29,7 +29,7 @@
   education4:
 
 - name: Dr. Chengyuan Liu
-  photo: LUCAS_Logo.png
+  photo: Chengyuan.jpeg
   info: 
   email: c.liu10@lboro.ac.uk
   number_educ: 2
@@ -39,7 +39,7 @@
   education4: 
 
 - name: Prof. Cunjia Liu
-  photo: LUCAS_Logo.png
+  photo: Cunjia.jpg
   info: 
   email: c.liu5@lboro.ac.uk
   number_educ: 2
@@ -49,7 +49,7 @@
   education4:
 
 - name: Dr. Thomas Steffen
-  photo: LUCAS_Logo.png
+  photo: Thomas.jpeg
   info: 
   email: t.steffen@lboro.ac.uk
   number_educ: 2
@@ -59,7 +59,7 @@
   education4:
   
 - name: Dr. Jun Yang
-  photo: LUCAS_Logo.png
+  photo: Jun.jpeg
   info: 
   email:  j.yang3@lboro.ac.uk
   number_educ: 2
