--- a/_data/phd_students.yml
+++ b/_data/phd_students.yml
@@ -18,7 +18,7 @@
   education3:
   education4:
 
-- name: Zijiang Ge
+- name: Zijian Ge
   photo: LUCAS_Logo.png
   info: Oct 2019
   email:  z.ge@lboro.ac.uk
