--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,13 @@
+- date: 26 Oct 2023
+  headline: <b>Report</b> Prof Hyondong Oh from UNIST, South Korea gives us a talk
 - date: Oct 2023
   headline: <b>New post!</b> The UKACC PhD Showcase and Prof Roger Goodall Memorial will be held at LU <a href="https://ukacc.sites.sheffield.ac.uk/events/ukacc-phd-showcase">here</a>.
+- date: July 2023
+  headline: <b>Congratulations</b> Dr Jun Yang has been promoted to Reader
+- date: July 2023
+  headline: <b>Congratulations</b> Dr Cunjia Liu has been promoted to Professor
+- date: Dec 2022
+  headline: <b>Congratulations</b> <a href="https://www.lboro.ac.uk/internal/news/2022/december/academic-elevated-to-ieee-fellow/" >Dr Jun Yang has been named an IEEE Fellow</a>
 - date: Feb 2022
   headline: <b>New post!</b> IEEE International conference on mechatronics will be held at LU <a href="https://www.imagovenues.co.uk/icm2023/">here</a>.
 - date: Feb 2022
