--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: Nov 2023
+  headline: <b>Congratulations</b> LUCAS Alumni Elevated to Academician of the Chinese Academy of Sciences
 - date: 26 Oct 2023
   headline: <b>Report</b> Prof Hyondong Oh from UNIST, South Korea gives us a talk
 - date: Oct 2023
