--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -10,11 +10,11 @@
 
 - name: Dr. Yang Liu
   photo: LUCAS_Logo.png
-  info: Lecture
-  email: 
+  info: Lecture Lecturer in Robotics and Autonomous Systems
+  email: y.liu4@hud.ac.uk
   number_educ: 2
   education1: PhD in control science and engineering  
-  education2: 
+  education2: University of Huddersfield
   education3: 
   education4:
 
