--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -3,7 +3,7 @@
   info: Lab Lead/Professor in Autonomous Vehicle
   email: w.chen@lboro.ac.uk
   number_educ: 2
-  education1: Senior Lecturer in Autonomous Vehicles
+  education1: Professor in Autonomous Vehicles
   education2: Unmanned vehicle, situational awareness, decision making, disturbance observer, model predictive control
   education3:
   education4: 
