--- a/_data/news.yml
+++ b/_data/news.yml
@@ -8,6 +8,12 @@
   headline: <b>Congratulations</b> Dr Jun Yang has been promoted to Reader
 - date: July 2023
   headline: <b>Congratulations</b> Dr Cunjia Liu has been promoted to Professor
+- date: July 2023
+  headline: <b>Congratulations</b> Unmanned Systems’ Annual Best Paper Award, Machine Learning-Based Crop Drought Mapping System by UAV Remote Sensing RGB Imagery, by Jinya Su, Matthew Coombes, Cunjia Liu, Yongchao Zhu, Xingyang Song, Shibo Fang, Lei Guo and Wen-Hua Chen
+- date: Jan 2023
+  headline: <b>Congratulations</b> Dr Jingjing Jiang has been promoted to Senior Lecturer 
+- date: 2023
+  headline: <b>Project</b> New project funded by QinetiQ for Dual Control application in threat minimization
 - date: Dec 2022
   headline: <b>Congratulations</b> <a href="https://www.lboro.ac.uk/internal/news/2022/december/academic-elevated-to-ieee-fellow/" >Dr Jun Yang has been named an IEEE Fellow</a>
 - date: Feb 2022
