--- a/_data/academic_members.yml
+++ b/_data/academic_members.yml
@@ -57,7 +57,7 @@
   education2: Thermo-mechanical and structural tyre modelling, tyre testing and model parameter identification, vehicle dynamics and control
   education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/georgios-mavros/" >Homepage</a>
   education4: 
-  
+
 - name: Dr. Thomas Steffen
   photo: Thomas.jpeg
   info: 
@@ -79,7 +79,7 @@
   education4:
 
 - name: Dr. Yuanjian Zhang
-  photo: Yuanjian.jpeg
+  photo: yuanjian.jpeg
   info: 
   email:  y.y.zhang@lboro.ac.uk
   number_educ: 2
