--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -1,3 +1,13 @@
+- name: Xinming Wang
+  photo: LUCAS_Logo.png
+  info: 
+  email:
+  number_educ: 2
+  education1: 
+  education2: 
+  education3: 
+  education4:
+
 - name: Dr. Xuefang Wang
   photo: LUCAS_Logo.png
   info: Lecture in control engineering
