--- a/_data/post_doc.yml
+++ b/_data/post_doc.yml
@@ -8,6 +8,16 @@
   education3: 
   education4:
 
+- name: Dr. Shuoyuan Xu
+  photo: LUCAS_Logo.png
+  info: Research Associate
+  email: s.xu2@lboro.ac.uk
+  number_educ: 2
+  education1: PhD in 
+  education2: 
+  education3: 
+  education4:
+
 - name: Dr. Rohit Nanavati
   photo: LUCAS_Logo.png
   info: Research Associate
