--- a/_data/alumni_members.yml
+++ b/_data/alumni_members.yml
@@ -15,7 +15,7 @@
   number_educ: 2
   education1: PhD in control theory and control engineering  
   education2: University of Leicester
-  education3: 
+  education3: <a href="https://le.ac.uk/people/xuefang-wang" >Homepage</a>
   education4:
 
 - name: Dr. Yang Liu
