news_ICIT_Ying_Michel

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,15 +1,23 @@
+- date:  April 2024
+  headline: <b>Report</b> Prof Michael Ruderman from University of Agder, Norway, gives us a talk
+- date: 17 April 2024
+  headline: <b>Report</b> Prof Ying Tan from University of Melbourne, Australia, gives us a talk
+- date: 26 March 2024
+  headline: <b>Congratulations</b> Best Paper Prize at IEEE ICIT 2024 “A Formal Finite-control-set control approach for PMSM drives under disturbances” by Yimeng Li, Xinming Wang, Jinhao Liu, James McGeary, Jun Yang and Shihua Li 
+- date: 26 Oct 2024
+  headline: <b>Congratulations</b> Prof Chen is invited as keynote speakers at IEEE ICIT 2024 <a href="https://icit2024.ieee-ies.org/keynoteSpeakers.html">here</a> 
 - date: Nov 2023
   headline: <b>Congratulations</b> LUCAS Alumni Prof Lei Guo elevated to Academician of the Chinese Academy of Sciences
 - date: 26 Oct 2023
-  headline: <b>Report</b> Prof Hyondong Oh from UNIST, South Korea gives us a talk
+  headline: <b>Report</b> Prof Hyondong Oh from UNIST, South Korea, gives us a talk
 - date: Oct 2023
-  headline: <b>New post!</b> The UKACC PhD Showcase and Prof Roger Goodall Memorial will be held at LU <a href="https://ukacc.sites.sheffield.ac.uk/events/ukacc-phd-showcase">here</a>.
+  headline: <b>New post!</b> The UKACC PhD Showcase and Prof Roger Goodall Memorial will be held at LU <a href="https://ukacc.sites.sheffield.ac.uk/events/ukacc-phd-showcase">here</a>
 - date: July 2023
   headline: <b>Congratulations</b> Dr Jun Yang has been promoted to Reader
 - date: July 2023
   headline: <b>Congratulations</b> Dr Cunjia Liu has been promoted to Professor
 - date: July 2023
-  headline: <b>Congratulations</b> Unmanned Systems’ Annual Best Paper Award, Machine Learning-Based Crop Drought Mapping System by UAV Remote Sensing RGB Imagery, by Jinya Su, Matthew Coombes, Cunjia Liu, Yongchao Zhu, Xingyang Song, Shibo Fang, Lei Guo and Wen-Hua Chen
+  headline: <b>Congratulations</b> Unmanned Systems’ Annual Best Paper Award "Machine Learning-Based Crop Drought Mapping System by UAV Remote Sensing RGB Imagery" by Jinya Su, Matthew Coombes, Cunjia Liu, Yongchao Zhu, Xingyang Song, Shibo Fang, Lei Guo and Wen-Hua Chen
 - date: Jan 2023
   headline: <b>Congratulations</b> Dr Jingjing Jiang has been promoted to Senior Lecturer 
 - date: Oct 2023
