--- a/_data/post_doc.yml
+++ b/_data/post_doc.yml
@@ -48,10 +48,10 @@
   education3: 
   education4:
 
-- name: Dr. Yuefei Zuo
+- name: Dr. Tao Yan
   photo: LUCAS_Logo.png
   info: Research Associate
-  email: y.zuo@lboro.ac.uk  
+  email: t.yan@lboro.ac.uk  
   number_educ: 2
   education1: PhD in 
   education2: 
