--- a/_data/post_doc.yml
+++ b/_data/post_doc.yml
@@ -5,7 +5,7 @@
   number_educ: 2
   education1: PhD in 
   education2: 
-  education3: 
+  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/shengkai-guo/" >Homepage</a>
   education4:
 
 - name: Dr. Rohit Nanavati
