--- a/_data/post_doc.yml
+++ b/_data/post_doc.yml
@@ -53,7 +53,7 @@
   info: Research Associate
   email: t.yan@lboro.ac.uk  
   number_educ: 2
-  education1: PhD in 
-  education2: 
+  education1: PhD in electrical and computer engineering
+  education2: Distributed control, robust control, signal processing, machine learning
   education3: <a href="https://scholar.google.com/citations?user=uQWoDssAAAAJ&hl=en" >Homepage</a>
   education4:
