--- a/_data/post_doc.yml
+++ b/_data/post_doc.yml
@@ -9,7 +9,7 @@
   education4:
 
 - name: Dr. Rohit Nanavati
-  photo: LUCAS_Logo.png
+  photo: Rohit.jpeg
   info: Research Associate
   email: r.nanavati@lboro.ac.uk
   number_educ: 2
@@ -19,7 +19,7 @@
   education4:
 
 - name: Dr. Pramod Pashupathy
-  photo: LUCAS_Logo.png
+  photo: Pramod.jpeg
   info: Research Associate
   email: p.pashupathy@lboro.ac.uk
   number_educ: 2
@@ -29,7 +29,7 @@
   education4: 
   
 - name: Dr. Guoqiang Tan
-  photo: LUCAS_Logo.png
+  photo: Guoqiang.jpeg
   info: Research Associate
   email: g.tan@lboro.ac.uk
   number_educ: 2
@@ -39,7 +39,7 @@
   education4:
 
 - name: Dr. Shuoyuan Xu
-  photo: LUCAS_Logo.png
+  photo: Shuoyuan.jpeg
   info: Research Associate
   email: s.xu2@lboro.ac.uk
   number_educ: 2
@@ -49,7 +49,7 @@
   education4:
 
 - name: Dr. Tao Yan
-  photo: LUCAS_Logo.png
+  photo: Yantao.jpeg
   info: Research Associate
   email: t.yan@lboro.ac.uk  
   number_educ: 2
