--- a/_data/academic_members.yml
+++ b/_data/academic_members.yml
@@ -5,7 +5,7 @@
   number_educ: 2
   education1: Lecture in Autonomous Vehicles
   education2: Autonomous vehicles which include unmanned aerial system forced landing, situational awareness, autonomous taxiing, mission planning optimization
-  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/matthew-coombes/" >Homepage</a>
+  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/matthew-coombes/" >Homepage</a>,  <a href="https://scholar.google.com/citations?user=4FrBuyoAAAAJ&hl=en" >View Google Scholar profile</a>
   education4: 
 
 - name: Dr. Jingjing Jiang
@@ -15,7 +15,7 @@
   number_educ: 2
   education1: Senior Lecturer in Intelligent Mobility and Autonomous Vehicles
   education2: Shared-Control (i.e. Human-machine interactions), development of advanced driver assistant system (ADAS), autonomous vehicles, traffic control
-  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/jingjing-jiang/" >Homepage</a>
+  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/jingjing-jiang/" >Homepage</a>, <a href="https://scholar.google.co.uk/citations?user=_-dXmygAAAAJ&hl=en" >View Google Scholar profile</a>
   education4:
 
 - name: Dr. James Knowles
@@ -25,7 +25,7 @@
   number_educ: 2
   education1: Senior Lecturer in Dynamics and Control
   education2: Applications of Numerical Continuation to investigations of engineering systems, mathematical modelling and analysis of dynamical systems, vehicle dynamics
-  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/james-knowles/" >Homepage</a>
+  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/james-knowles/" >Homepage</a>, <a href="https://scholar.google.co.uk/citations?user=BsmR_i4AAAAJ&hl=en" >View Google Scholar profile</a>
   education4:
 
 - name: Dr. Chengyuan Liu
@@ -35,7 +35,7 @@
   number_educ: 2
   education1: Lecturer in Safety-Critical Control
   education2: Safety-critical control and intelligent control for autonomous vehicles and robots
-  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/chengyuan-liu/" >Homepage</a>
+  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/chengyuan-liu/" >Homepage</a>, <a href="https://scholar.google.com/citations?user=UbmOtsAAAAAJ&hl=en" >View Google Scholar profile</a>
   education4: 
 
 - name: Prof. Cunjia Liu
@@ -45,7 +45,7 @@
   number_educ: 2
   education1: Professor of Robotics and Autonomous Systems
   education2: Novel perception and decision algorithms for robotic and autonomous system and their applications in security, industry and agriculture domains
-  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/cunjia-liu/" >Homepage</a>
+  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/cunjia-liu/" >Homepage</a>, <a href="https://scholar.google.co.uk/citations?user=tvgmOGAAAAAJ&hl=en" >View Google Scholar profile</a>
   education4:
 
 - name: Dr. Georgios Mavros
@@ -55,7 +55,7 @@
   number_educ: 2
   education1: Reader in Intelligent Mobility and Vehicle Dynamics
   education2: Thermo-mechanical and structural tyre modelling, tyre testing and model parameter identification, vehicle dynamics and control
-  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/georgios-mavros/" >Homepage</a>
+  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/georgios-mavros/" >Homepage</a>, <a href="https://scholar.google.co.uk/citations?user=fHoC3I8AAAAJ&hl=en" >View Google Scholar profile</a>
   education4: 
 
 - name: Dr. Thomas Steffen
@@ -65,7 +65,7 @@
   number_educ: 2
   education1: Reader in Control of Energy Systems
   education2: Electrification and control of hybrid vehicles, and the integration with the connected/autonomous vehicle
-  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/thomas-steffen/" >Homepage</a>
+  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/thomas-steffen/" >Homepage</a>, <a href="https://scholar.google.com/citations?user=mmPs1q4AAAAJ&hl=en" >View Google Scholar profile</a>
   education4:
   
 - name: Dr. Jun Yang
@@ -75,7 +75,7 @@
   number_educ: 2
   education1: Reader in Autonomous and Electric Vehicles
   education2: Disturbance observer, motion control, visual servoing, nonlinear control, and autonomous systems
-  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/jun-yang/" >Homepage</a>
+  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/jun-yang/" >Homepage</a>, <a href="https://scholar.google.com/citations?user=LWK-N8YAAAAJ&hl=en" >View Google Scholar profile</a>
   education4:
 
 - name: Dr. Yuanjian Zhang
@@ -85,5 +85,5 @@
   number_educ: 2
   education1: Lecturer in Intelligent Electric Vehicles
   education2: New generation clean propulsion control and optimisation, digital modelling and simulation, intelligent transportation system and artificial intelligence (AI) in engineering practice.
-  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/yuanjian-zhang/" >Homepage</a>
+  education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/yuanjian-zhang/" >Homepage</a>, <a href="https://scholar.google.com/citations?hl=zh-CN&user=GQW8QFwAAAAJ&view_op=list_works&sortby=pubdate" >View Google Scholar profile</a>
   education4:   
