--- a/_data/post_doc.yml
+++ b/_data/post_doc.yml
@@ -1,10 +1,10 @@
 - name: Dr. Shengkai Guo
-  photo: LUCAS_Logo.png
+  photo: Shengkai.jpeg
   info: Research Associate
   email: s.guo2@lboro.ac.uk
   number_educ: 2
-  education1: PhD in 
-  education2: 
+  education1: PhD in mechanical engineering
+  education2: Vibration energy harvesting, piezoelectric and electromagnetic energy conversion, IoT sensing systems, digital twin of health monitoring
   education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/shengkai-guo/" >Homepage</a>
   education4:
 
@@ -33,8 +33,8 @@
   info: Research Associate
   email: g.tan@lboro.ac.uk
   number_educ: 2
-  education1: PhD in 
-  education2: DCEE
+  education1: PhD in control theory and control engineering
+  education2: Dual control, optimation, state estimation
   education3: <a href="https://scholar.google.com/citations?user=AmO-3ncAAAAJ&hl=zh-CN" >Homepage</a>
   education4:
 
