--- a/_data/post_doc.yml
+++ b/_data/post_doc.yml
@@ -9,12 +9,12 @@
   education4:
 
 - name: Dr. Rohit Nanavati
-  photo: Rohit.jpeg
+  photo: Rohit.jpg
   info: Research Associate
   email: r.nanavati@lboro.ac.uk
   number_educ: 2
-  education1: PhD in 
-  education2: 
+  education1: PhD in Aerospace Engineering
+  education2: Intelligent path planning for autonomous vehicles, active inference, sensor management, guidance and control design for aerospace vehicles, nonlinear control design
   education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/rohit-nanavati/" >Homepage</a>
   education4:
 
