--- a/_data/post_doc.yml
+++ b/_data/post_doc.yml
@@ -19,12 +19,12 @@
   education4:
 
 - name: Dr. Pramod Pashupathy
-  photo: Pramod.jpeg
+  photo: Pramod.JPG
   info: Research Associate
   email: p.pashupathy@lboro.ac.uk
   number_educ: 2
-  education1: PhD in 
-  education2: 
+  education1: PhD in Aerospace Engineering
+  education2: Optimal control, nonlinear control, guidance of aerospace vehicles, state and parameter estimation
   education3: <a href="https://www.lboro.ac.uk/departments/aae/staff/pramod-pashupathy/" >Homepage</a>
   education4: 
   
