--- a/_data/post_doc.yml
+++ b/_data/post_doc.yml
@@ -43,7 +43,7 @@
   info: Research Associate
   email: s.xu2@lboro.ac.uk
   number_educ: 2
-  education1: PhD in Aerospace
+  education1: PhD in Aerospace engineering
   education2: Multi-target tracking, sensor fusion, SLAM (simultaneous localisation and mapping)
   education3: <a href="https://www.linkedin.com/in/shuoyuan-xu-289b1ba8/" >Homepage</a>
   education4:
