--- a/_data/post_doc.yml
+++ b/_data/post_doc.yml
@@ -4,7 +4,7 @@
   email: s.guo2@lboro.ac.uk
   number_educ: 2
   education1: PhD in mechanical engineering
-  education2: Vibration energy harvesting, piezoelectric and electromagnetic energy conversion, IoT sensing systems, digital twin of health monitoring
+  education2: Electrified vehicleenergy managementeco-driving control
   education3: <a href="https://scholar.google.com/citations?user=wMs60Z8AAAAJ&hl=en" >Homepage</a>
   education4:
 
